internal class AnimationStrings
{
    internal static string speed = "speed";
    internal static string death = "death";
    internal static string ultimate = "ultimate";
    internal static string basicAttack = "basicAttack";
    internal static string skillAttack = "skillAttack";
    internal static string CamIn = "CamIn";
    internal static string CamOut = "CamOut";
}